[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/parents/scenes/EntityBase_KB/EntityBase_KB.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/scripts/walking_mine/engine.gd" type="Script" id=2]
[ext_resource path="res://src/entities/scripts/walking_mine/walking_mine.gd" type="Script" id=3]
[ext_resource path="res://src/entities/scripts/walking_mine/AI.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/walking_mine.png-f017ad2d5cbc8e1b2b1425c21e213ced.stex"

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}

[sub_resource type="Animation" id=4]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 11.0

[node name="WalkingMine" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 521
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
texture = SubResource( 2 )
hframes = 3
vframes = 3
frame = 7

[node name="AnimationPlayer" parent="Sprite" index="0"]
anims/crouch = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="engine" type="Node2D" parent="." index="2"]
script = ExtResource( 2 )

[node name="AI" type="Node2D" parent="engine" index="0"]
script = ExtResource( 4 )

[node name="countdown_timer" type="Timer" parent="engine" index="1"]
process_mode = 0
wait_time = 1.25
one_shot = true

[node name="patience" type="Timer" parent="engine" index="2"]
process_mode = 0
wait_time = 15.0
one_shot = true

[node name="activation_sensor" type="Area2D" parent="." index="3"]
monitoring = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="activation_sensor" index="0"]
shape = SubResource( 5 )

[connection signal="timeout" from="engine/countdown_timer" to="." method="_on_countdown_timer_timeout"]
[connection signal="timeout" from="engine/patience" to="engine/AI" method="_on_patience_timeout"]
[connection signal="body_entered" from="activation_sensor" to="." method="_on_activation_sensor_body_entered"]
